# ftdines

./: CMakeLists.txt  README.md  keymap1.cfg  keymap2.cfg
source/: debug.h  ftdi_if.c  ftdi_if.h  input_channel.c  input_channel.h  keymap.c  keymap.h  main.c  uinput.c  uinput.h
systemd/: ftdines.service
